@@ -3700,6 +3700,8 @@ STR_6625    :Invalid colour
 STR_6626    :Animation is backwards
 STR_6627    :Track speed too high!
 STR_6628    :Can only be placed on path edges!
+STR_6629    :Align toolbar buttons horizontally centred
+STR_6630    :This setting will align toolbar the buttons horizontally in the centre of the screen. The traditional way of aligning them is to in left and right corner.
 
 #############
 # Scenarios #
