@@ -3856,6 +3856,9 @@ enum : uint16_t
 
     STR_CAN_ONLY_BE_PLACED_ON_PATH_EDGES = 6628,
 
+    STR_OPTIONS_TOOLBAR_BUTTONS_CENTRED = 6629,
+    STR_OPTIONS_TOOLBAR_BUTTONS_CENTRED_TIP = 6630,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
