@@ -1,5 +1,6 @@
 0.4.12 (in development)
 ------------------------------------------------------------------------
+- Feature: [#622] Add option to align the top toolbar buttons horizontally centred (off by default).
 - Feature: [#21714] [Plugin] Costume assignment is now tailored to each staff type.
 - Feature: [#21913] [Plugin] Allow precise and safe control of peep animations.
 - Improved: [#21981] Rendering performance of the map window has been improved considerably.
